--- a/src/app/components/dynamic-form/dynamic-form.component.scss
+++ b/src/app/components/dynamic-form/dynamic-form.component.scss
@@ -40,3 +40,27 @@ mat-form-field {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.instruction-table {
+    width: 100%;
+    border-collapse: collapse;
+    td {
+        padding: 8px;
+        border: 1px solid #ccc;
+    }
+}
+    
+.evaluation-table {
+    width: 100%;
+    margin-top: 20px;
+    border-collapse: collapse;
+    th, td {
+        border: 1px solid #ccc;
+        padding: 10px;
+        text-align: left;
+    }
+    th {
+        background-color: #f0f0f0;
+    }
+}
+    
