--- a/src/app/components/asignacion-fechas/asignacion-fechas.component.scss
+++ b/src/app/components/asignacion-fechas/asignacion-fechas.component.scss
@@ -1,43 +1,33 @@
 .asignacion-fechas {
-  width: 100%;
-  height: 100vh; /* Ocupa toda la altura de la ventana */
+  width: 80%;
+  margin: 0 auto;
   padding: 20px;
-  box-sizing: border-box; /* Asegura que el padding esté incluido en el 100% de width y height */
-  border: 2px solid var(--md-primary-500); /* Borde azul oscuro */
-  background-color: #fff; /* Fondo blanco */
   border-radius: 10px;
   background-color: #ffffff;
 
   h2 {
     text-align: center;
-    color: var(--md-primary-contrast-400); /* Texto blanco */
-    background-color: var(--md-primary-400); /* Fondo azul oscuro */
-    padding: 20px;
+    color: var(--md-primary-contrast-400);
+    background-color: var(--md-primary-400);
+    padding: 10px;
     border-radius: 10px;
     margin-bottom: 20px;
   }
 
-  .selectors-container {
-    display: flex;
-    justify-content: space-between;
+  .nivel-formacion {
     margin-bottom: 20px;
 
-    .nivel-formacion,
-    .periodo-formacion {
-      width: 48%;
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
 
-      label {
-        display: block;
-        margin-bottom: 5px;
-      }
-
-      select {
-        width: 100%;
-        padding: 10px;
-        border: 1px solid var(--md-primary-200); /* Borde azul claro */
-        border-radius: 4px;
-        background-color: var(--md-primary-50); /* Fondo azul muy claro */
-      }
+    select {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid var(--md-primary-200);
+      border-radius: 4px;
+      background-color: var(--md-primary-50);
     }
   }
 
@@ -48,20 +38,8 @@
 
     .fila-procesos {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       gap: 20px;
-
-      &.fila-1 {
-        .proceso {
-          width: calc(33.33% - 20px); /* Tres procesos en la primera fila */
-        }
-      }
-
-      &.fila-2 {
-        .proceso {
-          width: calc(50% - 20px); /* Dos procesos en la segunda fila */
-        }
-      }
     }
 
     .proceso {
@@ -78,42 +56,20 @@
         color: var(--md-primary-contrast-400);
         font-weight: 400;
         padding: 10px;
-        border-radius: 10px;
-
-        .nombre-input {
-          width: 100%;
-          border: none;
-          background-color: transparent;
-          text-align: center;
-          font-size: 16px;
-          font-weight: bold;
-          color: var(--md-primary-contrast-400); /* Texto blanco */
-        }
-
-        .edit-icon {
-          position: absolute;
-          right: 10px;
-          cursor: pointer;
-        }
+        border-radius: 4px;
       }
 
-      .fechas-container {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
+      .fechas {
+        margin: 10px 0;
 
-        .fechas {
-          flex: 1;
+        mat-form-field {
+          width: 100%;
+        }
 
-          mat-form-field {
-            width: 100%;
-          }
-
-          mat-datepicker-toggle {
-            margin-left: -32px; /* Ajuste para colocar el icono al lado derecho del botón */
-            position: relative;
-            right: -8px;
-          }
+        mat-datepicker-toggle {
+          margin-left: -32px; /* Ajuste para colocar el icono al lado derecho del botón */
+          position: relative;
+          right: -8px;
         }
       }
 
@@ -134,105 +90,21 @@
     gap: 10px;
     width: 100%;
     padding: 10px;
-    background-color: var(--md-primary-500); /* Fondo azul principal */
-    color: var(--md-primary-contrast-500); /* Texto blanco */
+    background-color: var(--md-primary-500);
+    color: var(--md-primary-contrast-500);
     border: none;
-    border-radius: 30px;
+    border-radius: 4px;
     cursor: pointer;
     margin-top: 30px;
 
     &:hover {
-      background-color: var(--md-primary-700); /* Fondo azul más oscuro al pasar el mouse */
+      background-color: var(--md-primary-700);
     }
 
     mat-icon {
       font-size: 24px;
     }
   }
-
-  .confirmation {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff; /* Fondo blanco */
-    border: 1px solid var(--md-primary-400); /* Borde azul oscuro */
-    border-radius: 10px;
-    padding: 20px;
-    color: #000; /* Texto negro */
-    z-index: 1000;
-
-    .confirmation-content {
-        text-align: center;
-
-        h3 {
-            margin-top: 0;
-            background-color: var(--md-primary-400); /* Fondo azul oscuro */
-            color: var(--md-primary-contrast-400); /* Texto blanco */
-            padding: 10px;
-            border-radius: 10px;
-        }
-
-        .icon-wrapper {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 40px;
-            color: var(--md-warning-500); /* Color amarillo para el ícono de interrogación */
-            margin-bottom: 10px;
-        }
-
-        button {
-            margin-top: 20px;
-            background-color: var(--md-primary-500); /* Fondo del botón */
-            color: var(--md-primary-contrast-500); /* Texto del botón */
-            &:hover {
-                background-color: var(--md-primary-700); /* Fondo del botón al pasar el mouse */
-            }
-        }
-    }
-}
-
-  .evaluaciones-guardadas {
-    margin-top: 20px;
-    background-color: var(--md-primary-50); /* Fondo azul muy claro */
-    padding: 10px;
-    border-radius: 4px;
-
-    p {
-      margin: 0 0 10px;
-      font-weight: bold;
-    }
-
-    ul {
-      padding: 0;
-      list-style: none;
-
-      li {
-        margin: 5px 0;
-      }
-    }
-  }
-
-  .error-message {
-    color: red;
-    text-align: center;
-    margin-top: 20px;
-  }
-
-  .punto-verde {
-    width: 10px;
-    height: 10px;
-    background-color: green;
-    border-radius: 50%;
-    display: inline-block;
-    margin-right: 8px;
-  }
-
-}
-
-.w-100 {
-  width: 50%;
 }
 
 .w-100 {
