--- a/src/app/components/definicion-formularios/definicion-formularios.component.scss
+++ b/src/app/components/definicion-formularios/definicion-formularios.component.scss
@@ -1,22 +1,22 @@
-.form-container {  
+.form-container {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0.5rem 1rem 0 rgba(44, 51, 73, 0.1);
   max-width: 500px;
   margin: auto;
-  text-align: center;  
+  text-align: center;
   background-color: #ffffff;
 }
 
 .form-group {
   margin-bottom: 20px;
   text-align: left;
-}
 
-.form-group label {
-  display: block;
-  margin-bottom: 5px;
-  color: var(--md-primary-600);
+  label {
+    display: block;
+    margin-bottom: 5px;
+    color: var(--md-primary-600);
+  }
 }
 
 .form-control {
@@ -35,31 +35,12 @@
   align-items: center;
   justify-content: center;
   border-radius: 4px;
-  
 }
 
 .processes-grid {
   display: grid;
   grid-template-columns: 1fr;
   gap: 10px;
-}
-
-@keyframes heartbeat {
-  0% {
-    transform: scale(1);
-  }
-  30% {
-    transform: scale(1.02);
-  }
-  50% {
-    transform: scale(0.98);
-  }
-  70% {
-    transform: scale(1.02);
-  }
-  100% {
-    transform: scale(1);
-  }
 }
 
 .process-card {
@@ -72,43 +53,51 @@
   text-align: center;
   cursor: pointer;
   transition: border-color 0.3s, background-color 0.3s;
+
+  &:hover {
+    border-color: var(--md-primary-500);
+    background-color: var(--md-primary-50);
+  }
+
+  &:focus,
+  &.selected {
+    animation: heartbeat 1s ease-in-out;
+    outline: none;
+    box-shadow: none;
+  }
+
+  mat-icon {
+    font-size: 24px;
+    color: var(--md-primary-700);
+    margin-right: 10px;
+  }
+
+  &.selected {
+    border-color: var(--md-primary-700);
+    background-color: var(--md-primary-700);
+    color: var(--md-primary-contrast-400);
+
+    mat-icon,
+    .check-icon {
+      color: var(--md-primary-contrast-400);
+    }
+
+    .check-icon {
+      margin-left: 10px;
+    }
+  }
 }
 
-.process-card:hover {
-  border-color: var(--md-primary-500);
-  background-color: var(--md-primary-50);
-}
-
-.process-card:focus, .process-card.selected {
-  animation: heartbeat 1s ease-in-out;
-}
-
-.process-card mat-icon {
-  font-size: 24px;
-  color: var(--md-primary-700);
-  margin-right: 10px;
-}
-
-.process-card.selected {
-  border-color: var(--md-primary-700);
-  background-color: var(--md-primary-700);
-  color: var(--md-primary-contrast-400);
-}
-
-.process-card.selected mat-icon {
-  font-size: 24px;
-  color: var(--md-primary-contrast-400);
-  margin-right: 10px;
-}
-
-.process-card.selected .check-icon {
-  color: var(--md-primary-contrast-400);
-  margin-left: 10px;
-}
-
-.process-card:focus {
-  outline: none;
-  box-shadow: none;
+@keyframes heartbeat {
+  0%, 100% {
+    transform: scale(1);
+  }
+  30%, 70% {
+    transform: scale(1.02);
+  }
+  50% {
+    transform: scale(0.98);
+  }
 }
 
 .mat-mdc-row:hover .mat-mdc-cell {
