--- a/src/app/components/metricas/metricas.component.scss
+++ b/src/app/components/metricas/metricas.component.scss
@@ -94,3 +94,32 @@ table {
   justify-content: center;
   gap: 30px;
 }
+
+.spaced{
+  margin-top: 20px;
+}
+
+.mat-stepper-vertical {
+  margin-top: 8px;
+}
+
+.mat-mdc-form-field {
+  margin-top: 16px;
+}
+
+/* metricas.component.scss */
+
+.mat-step {
+  width: 100%; /* Ajusta el ancho según tus necesidades */
+}
+
+.form-container {
+  display: grid;
+  flex-direction: column;
+  width: 100%;
+}
+
+.form-field {
+  width: 100%;
+  margin-bottom: 16px; /* Ajusta el margen según el diseño */
+}
