--- a/src/app/components/metricas/metricas.component.scss
+++ b/src/app/components/metricas/metricas.component.scss
@@ -8,7 +8,7 @@
   border-right: 1px solid black;
 }
 
-p{
+p {
   margin-top: 20px;
   margin-bottom: 20px;
   display: block;
@@ -55,7 +55,6 @@ table {
   background-color: #ffffff !important;
 }
 
-
 ::ng-deep .azulOscuro {
   background-color: var(--primary) !important;
   color: #ffffff !important;
@@ -75,9 +74,10 @@ table {
   width: auto;
 }
 
-.scrollable-table {
-  overflow-x: auto;
-}
+/*  .scrollable-table {
+  overflow-x: visible;
+  background-color: aqua;
+}   */
 
 .small-form-field {
   width: 100px;
@@ -95,7 +95,7 @@ table {
   gap: 30px;
 }
 
-.spaced{
+.spaced {
   margin-top: 20px;
 }
 
