--- a/src/app/components/metricas/metricas.component.scss
+++ b/src/app/components/metricas/metricas.component.scss
@@ -123,3 +123,16 @@ table {
   width: 100%;
   margin-bottom: 16px; /* Ajusta el margen según el diseño */
 }
+
+//HOVER SOBRE LAS FILAS
+.mat-mdc-row:hover .mat-mdc-cell {
+  background-color: var(--color100);
+}
+
+/* Estilos para el indicador de estado */
+.badge {
+  margin: 0.4em;
+  width: 0.5em;
+  height: 0.5em;
+  border-radius: 100%;
+}
